Fixed spacing in styles

--- a/__Main__/src/Game.css
+++ b/__Main__/src/Game.css
@@ -55,7 +55,7 @@ html {
   width: 40%;
   margin: 0;
   padding-right: 4rem;
-  padding-top: 2.5rem;
+  padding-top: 2rem;
 }
 
 h2 {
@@ -77,8 +77,11 @@ h2 {
 }
 
 h3 {
+  font-size: 22px;
   text-transform: uppercase;
+  text-decoration: underline;
   color: #fff;
+  padding: 1em 0;
 }
 
 li {
@@ -98,7 +101,7 @@ p {
 .buttons-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
+  margin: 1rem 0px;
 }
 
 .btn {
@@ -108,6 +111,7 @@ p {
   outline: none;
   text-transform: uppercase;
   border-radius: 8px;
+  box-shadow: 5px 5px 10px #282c34;
 }
 
 .btn:hover {
